<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transportation_heading" />
    
    <RadioGroup
        android:id="@+id/radioTransportation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/radioButtonWalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/walk" />

    <RadioButton
        android:id="@+id/radioButtonBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bike" />

    <RadioButton
        android:id="@+id/radioButtonBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bus" />

    <RadioButton
        android:id="@+id/radioButtonRail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/rail" />
    
    <RadioButton
        android:id="@+id/radioButtonTaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/taxi" />
    
    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButtonTransportationGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:textOff="@string/go"
    	android:textOn="@string/stop" />

    <TextView
        android:id="@+id/homeStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioTransportation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="status label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
